--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 :root {
   --primary-color: #565656;
-  --secondary-color: #4C4C4C;
-  --grid-color: #D3D3D3;
+  --secondary-color: #4c4c4c;
+  --grid-color: #d3d3d3;
   --secondary-text-color: #fff;
   --main-background-color: #f1f1f1;
 }
@@ -10,14 +10,13 @@ a {
   color: var(--primary-color);
 }
 
-body{
-  font-family: 'Karla', sans-serif;
+body {
+  font-family: "Karla", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.6;
   background-color: var(--main-background-color);
   animation: transitionIN 0.75s;
-
 }
 
 * {
@@ -43,7 +42,7 @@ body{
 }
 
 .page-header__item {
-  flex: 0 1 200px
+  flex: 0 1 200px;
 }
 
 .page-header__item:last-child {
@@ -61,29 +60,28 @@ body{
 }
 
 h1 {
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: 500;
   font-size: 30px;
-  line-height: 1.0;
+  line-height: 1;
 }
 
 h2 {
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: 500;
   font-size: 25px;
-  line-height: 1.0;
+  line-height: 1;
 }
 
 h3 {
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: 500;
   font-size: 20px;
-  line-height: 1.0;
+  line-height: 1;
 }
 
-
-
-.button, button {
+.button,
+button {
   border: none;
   display: inline-block;
   font-family: inherit;
@@ -96,18 +94,15 @@ h3 {
   transition: 0.9s;
 }
 
-
 .button:hover,
 .button:focus {
   cursor: pointer;
   opacity: 0.5;
 }
 
-
 a:active {
-    color: var(--secondary-text-color);
+  color: var(--secondary-text-color);
 }
-
 
 .navigation-list__item--active {
   text-decoration: none;
@@ -124,78 +119,77 @@ a:active {
   width: 250px;
   margin-right: 40px;
   border-radius: 50%;
-
 }
 .form-style-1 {
-	margin:10px auto;
-	max-width: 400px;
-	padding: 20px 12px 10px 20px;
+  margin: 10px auto;
+  max-width: 400px;
+  padding: 20px 12px 10px 20px;
 }
 .form-style-1 li {
-	padding: 0;
-	display: block;
-	list-style: none;
-	margin: 10px 0 0 0;
+  padding: 0;
+  display: block;
+  list-style: none;
+  margin: 10px 0 0 0;
 }
-.form-style-1 label{
-	margin:0 0 3px 0;
-	padding:0px;
-	display:block;
-	font-weight: bold;
+.form-style-1 label {
+  margin: 0 0 3px 0;
+  padding: 0px;
+  display: block;
+  font-weight: bold;
 }
-.form-style-1 input[type=text],
-.form-style-1 input[type=date],
-.form-style-1 input[type=datetime],
-.form-style-1 input[type=number],
-.form-style-1 input[type=search],
-.form-style-1 input[type=time],
-.form-style-1 input[type=url],
-.form-style-1 input[type=email],
+.form-style-1 input[type="text"],
+.form-style-1 input[type="date"],
+.form-style-1 input[type="datetime"],
+.form-style-1 input[type="number"],
+.form-style-1 input[type="search"],
+.form-style-1 input[type="time"],
+.form-style-1 input[type="url"],
+.form-style-1 input[type="email"],
 textarea,
-select{
-	box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	border:1px solid var(--primary-color);
-	padding: 7px;
-	margin:0px;
-	-webkit-transition: all 0.30s ease-in-out;
-	-moz-transition: all 0.30s ease-in-out;
-	-ms-transition: all 0.30s ease-in-out;
-	-o-transition: all 0.30s ease-in-out;
-	outline: none;
+select {
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  border: 1px solid var(--primary-color);
+  padding: 7px;
+  margin: 0px;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  outline: none;
 }
-.form-style-1 input[type=text]:focus,
-.form-style-1 input[type=date]:focus,
-.form-style-1 input[type=datetime]:focus,
-.form-style-1 input[type=number]:focus,
-.form-style-1 input[type=search]:focus,
-.form-style-1 input[type=time]:focus,
-.form-style-1 input[type=url]:focus,
-.form-style-1 input[type=email]:focus,
+.form-style-1 input[type="text"]:focus,
+.form-style-1 input[type="date"]:focus,
+.form-style-1 input[type="datetime"]:focus,
+.form-style-1 input[type="number"]:focus,
+.form-style-1 input[type="search"]:focus,
+.form-style-1 input[type="time"]:focus,
+.form-style-1 input[type="url"]:focus,
+.form-style-1 input[type="email"]:focus,
 .form-style-1 textarea:focus,
-.form-style-1 select:focus{
-	-moz-box-shadow: 0 0 8px var(--primary-color);
-	-webkit-box-shadow: 0 0 8px var(--primary-color);
-	box-shadow: 0 0 8px var(--primary-color);
-	border: 1px solid var(--primary-color);
+.form-style-1 select:focus {
+  -moz-box-shadow: 0 0 8px var(--primary-color);
+  -webkit-box-shadow: 0 0 8px var(--primary-color);
+  box-shadow: 0 0 8px var(--primary-color);
+  border: 1px solid var(--primary-color);
 }
-.form-style-1 .field-divided{
-	width: 49%;
-}
-
-.form-style-1 .field-long{
-	width: 100%;
-}
-.form-style-1 .field-select{
-	width: 100%;
-}
-.form-style-1 .field-textarea{
-	height: 100px;
+.form-style-1 .field-divided {
+  width: 49%;
 }
 
-.form-style-1 .required{
-	color:red;
+.form-style-1 .field-long {
+  width: 100%;
+}
+.form-style-1 .field-select {
+  width: 100%;
+}
+.form-style-1 .field-textarea {
+  height: 100px;
+}
+
+.form-style-1 .required {
+  color: red;
 }
 
 .contact-formtext {
@@ -206,7 +200,6 @@ select{
   margin: 20px;
   text-align: center;
 }
-
 
 .page-footer {
   clear: both;
@@ -221,22 +214,20 @@ select{
 
 .grid__item {
   display: inline-block;
-  width: 33%
+  width: 33%;
 }
 
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 20px;
-  margin: 20px
-
+  margin: 20px;
 }
 
 .grid__item {
   background-color: var(--grid-color);
   padding: 10px;
   width: auto;
-
 }
 
 .grid__item:last-child {
@@ -244,8 +235,8 @@ select{
   grid-column-end: 3;
   grid-row-start: 1;
   grid-row-end: 3;
-  background-color:var(--secondary-color);
-  color: #fff
+  background-color: var(--secondary-color);
+  color: #fff;
 }
 
 .link-contact-me {
@@ -283,16 +274,16 @@ select{
     transform: translate(0, 50px);
   }
   to {
-    transform: translate(200px,50px);
+    transform: translate(200px, 50px);
   }
 }
 
 @keyframes cloud-move-reverse {
   from {
-    transform: translate(446px,48px);
+    transform: translate(446px, 48px);
   }
   to {
-    transform: translate(100px,48px);
+    transform: translate(100px, 48px);
   }
 }
 
@@ -311,7 +302,7 @@ select{
 .sun {
   animation-duration: 4s;
   animation-name: color-change;
-  animation-iteration-count:  infinite;
+  animation-iteration-count: infinite;
   animation-direction: alternate;
   animation-timing-function: linear;
 }
@@ -321,7 +312,7 @@ select{
     grid-template-columns: 1fr;
   }
 }
-@media all and (min-width: 500px) and (max-width: 750px){
+@media all and (min-width: 500px) and (max-width: 750px) {
   .grid {
     grid-template-columns: 1fr 1fr;
   }
