--- a/css/styles.production.css
+++ b/css/styles.production.css
@@ -96,8 +96,9 @@ h2 {
 h3 {
   font-family: "Rubik", sans-serif;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 60px;
   line-height: 1;
+  margin: 60px 0px 0px 0px;
 }
 
 .button {
@@ -123,7 +124,7 @@ button {
   color: white;
   text-decoration: none;
   padding: 10px;
-  border-radius: 3px;
+  border-radius: 3%;
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
   -webkit-transition: 0.9s;
   -o-transition: 0.9s;
@@ -140,6 +141,114 @@ a:active {
   color: #fff;
 }
 
+/* Sweep To Right */
+.hvr-sweep-to-right {
+  background-color: #4c4c4c;
+  color: #fff;
+  padding: 10px;
+  border-radius: 8px;
+  text-decoration: none;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+.hvr-sweep-to-right:before {
+  border-radius: 8px;
+  text-decoration: none;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #b90808;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transform-origin: 0 50%;
+  transform-origin: 0 50%;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.hvr-sweep-to-right:hover,
+.hvr-sweep-to-right:focus,
+.hvr-sweep-to-right:active {
+  color: white;
+}
+.hvr-sweep-to-right:hover:before,
+.hvr-sweep-to-right:focus:before,
+.hvr-sweep-to-right:active:before {
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}
+
+/* Sweep To Left */
+.hvr-sweep-to-left {
+  background-color: #4c4c4c;
+  color: #fff;
+  padding: 10px;
+  border-radius: 8px;
+  text-decoration: none;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+.hvr-sweep-to-left:before {
+  border-radius: 8px;
+  text-decoration: none;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #b90808;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transform-origin: 100% 50%;
+  transform-origin: 100% 50%;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.hvr-sweep-to-left:hover,
+.hvr-sweep-to-left:focus,
+.hvr-sweep-to-left:active {
+  color: white;
+}
+.hvr-sweep-to-left:hover:before,
+.hvr-sweep-to-left:focus:before,
+.hvr-sweep-to-left:active:before {
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}
+
 .navigation-list__item--active {
   text-decoration: none;
 }
@@ -148,7 +257,8 @@ a:active {
   max-width: 700px;
   margin: 0 auto;
   text-align: center;
-  padding-top: 12rem;
+  padding-top: 8rem;
+  align-items: center;
 }
 
 .profile__picture {
@@ -156,6 +266,14 @@ a:active {
   width: 250px;
 
   border-radius: 50%;
+}
+
+.intro-text-block {
+  text-align: left;
+}
+
+.intro-text {
+  text-align: center;
 }
 
 .img-work {
@@ -379,7 +497,7 @@ select {
 }
 
 .form-style-1 .required {
-  color: red;
+  color: #b90808;d;
 }
 
 .contact-formtext {
@@ -387,20 +505,42 @@ select {
 }
 
 .contact-block {
-  margin: 0px 0px 0px 55px;
+  margin: 0px 0px 0px 110px;
   text-align: left;
 }
 
+/* Footer */
+
 .page-footer {
   clear: both;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
   text-align: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  justify-content: center;
+  width: 100%;
+  background-color: var(--background-primary);
+  padding: 1em;
+}
+
+.social__media {
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+}
+
+.footer-text {
+  margin: 2em 1em;
+}
+
+.social__logo {
+  cursor: pointer;
+  margin: 0em 0.25em;
+}
+
+.social__logo:hover {
+  opacity: 0.5;
+  transition: var(--primary-transition);
 }
 .skills-text {
   margin: 0px 150px 20px 50px;
@@ -414,6 +554,17 @@ select {
   font-size: 90px;
   line-height: 1;
 }
+.hello-title {
+  margin: 50px 0px 0px 100px;
+  font-family: "Rubik", sans-serif;
+  font-weight: bold;
+  font-size: 120px;
+  line-height: 1;
+}
+
+.about-page {
+  margin-top: 100px;
+}
 
 .about-title {
   margin: 0px 0px 10px 50px;
@@ -424,7 +575,7 @@ select {
 }
 
 .about-text {
-  margin: 0px 50px 20px 50px;
+  margin: 0px 50px 20px 100px;
   text-align: justify;
   width: 750px;
 }
@@ -432,6 +583,12 @@ select {
 .grid__item {
   display: inline-block;
   width: 33%;
+  opacity: 0.4;
+  transition: 0.9s;
+}
+
+.grid__item:hover {
+  opacity: 1;
 }
 
 .grid {
@@ -462,128 +619,92 @@ select {
   color: #fff;
 }
 
+.hvr-overline-reveal {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  overflow: hidden;
+}
+.hvr-overline-reveal:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  right: 0;
+  top: 0;
+  background: #b90808;
+  height: 4px;
+  -webkit-transform: translateY(-4px);
+  transform: translateY(-4px);
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.hvr-overline-reveal:hover:before,
+.hvr-overline-reveal:focus:before,
+.hvr-overline-reveal:active:before {
+  -webkit-transform: translateY(0);
+  transform: translateY(0);
+}
+
 .link-contact-me {
   color: #fff;
 }
 
-@keyframes transitionIN {
-  from {
-    opacity: 0;
-    -webkit-transform: rotateX(-10deg);
-    transform: rotateX(-10deg);
-  }
-
-  to {
-    opacity: 1;
-    -webkit-transform: rotateX(0);
-    transform: rotateX(0);
-  }
-}
-
-@-webkit-keyframes color-change {
-  from {
-    fill: #edc655;
-  }
-  to {
-    fill: #f76414;
-  }
-}
-
-@keyframes color-change {
-  from {
-    fill: #edc655;
-  }
-  to {
-    fill: #f76414;
-  }
-}
-
-@-webkit-keyframes cloud-move {
-  from {
-    -webkit-transform: translate(0, 50px);
-    transform: translate(0, 50px);
-  }
-  to {
-    -webkit-transform: translate(200px, 50px);
-    transform: translate(200px, 50px);
-  }
-}
-
-@keyframes cloud-move {
-  from {
-    -webkit-transform: translate(0, 50px);
-    transform: translate(0, 50px);
-  }
-  to {
-    -webkit-transform: translate(200px, 50px);
-    transform: translate(200px, 50px);
-  }
-}
-
-@-webkit-keyframes cloud-move-reverse {
-  from {
-    -webkit-transform: translate(446px, 48px);
-    transform: translate(446px, 48px);
-  }
-  to {
-    -webkit-transform: translate(100px, 48px);
-    transform: translate(100px, 48px);
-  }
-}
-
-@keyframes cloud-move-reverse {
-  from {
-    -webkit-transform: translate(446px, 48px);
-    transform: translate(446px, 48px);
-  }
-  to {
-    -webkit-transform: translate(100px, 48px);
-    transform: translate(100px, 48px);
-  }
-}
-
-.cloud-front {
-  -webkit-animation-duration: 30s;
-  animation-duration: 30s;
-  -webkit-animation-name: cloud-move;
-  animation-name: cloud-move;
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-  -webkit-animation-direction: alternate;
-  animation-direction: alternate;
-  -webkit-animation-timing-function: linear;
-  animation-timing-function: linear;
-}
-
-.cloud-back {
-  -webkit-animation: 30s cloud-move-reverse infinite alternate linear;
-  animation: 30s cloud-move-reverse infinite alternate linear;
-}
-
-.sun {
-  -webkit-animation-duration: 4s;
-  animation-duration: 4s;
-  -webkit-animation-name: color-change;
-  animation-name: color-change;
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-  -webkit-animation-direction: alternate;
-  animation-direction: alternate;
-  -webkit-animation-timing-function: linear;
-  animation-timing-function: linear;
-}
-
 @media all and (max-width: 500px) {
+  .hvr-sweep-to-left {
+    margin: 7px 0px 7px 0px;
+  }
   .grid {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
+    margin: 0 10px 0 10px;
+    padding: auto;
+  }
+
+  .about-page {
+    margin: 0;
   }
   .about-text {
     width: auto;
+    margin: auto;
+    padding: 0px 20px 0px 20px;
   }
+
   .skills-text {
     width: auto;
     margin: 20px 50px 0px 50px;
+  }
+  .hello-title {
+    width: auto;
+    margin: 20px 10px 0px 10px;
+    text-align: center;
+    font-size: 80px;
+  }
+  .profile__picture {
+    width: 90%;
+    align-items: center;
+    padding: 0px 10px 10px 10px;
+  }
+  .profile {
+    padding: 0px 10px 0px 10px;
+    align-content: center;
+    align-items: center;
+  }
+  .intro-text {
+    text-align: center;
+    padding: 0 10px 0 10px;
+  }
+  .page-footer {
+    margin-bottom: 0;
+    background-color: var(--background-primary);
+    position: unset;
   }
 }
 @media all and (min-width: 500px) and (max-width: 750px) {
@@ -596,6 +717,10 @@ select {
   }
   .skills-text {
     width: auto;
+  }
+  .intro-text {
+    text-align: center;
+    padding-left: 10px;
   }
 }
 @media all and (max-width: 750px) {
