--- a/css/styles.production.css
+++ b/css/styles.production.css
@@ -257,7 +257,7 @@ a:active {
   max-width: 700px;
   margin: 0 auto;
   text-align: center;
-  padding-top: 8rem;
+  padding-top: 5rem;
   align-items: center;
 }
 
@@ -497,7 +497,7 @@ select {
 }
 
 .form-style-1 .required {
-  color: #b90808;d;
+  color: #b90808;
 }
 
 .contact-formtext {
@@ -514,11 +514,11 @@ select {
 .page-footer {
   clear: both;
   text-align: center;
-  position: fixed;
+  position: sticky;
   bottom: 0;
-  left: 0;
   justify-content: center;
   width: 100%;
+  height: 60px;
   background-color: var(--background-primary);
   padding: 1em;
 }
@@ -535,7 +535,6 @@ select {
 
 .social__logo {
   cursor: pointer;
-  
 }
 
 .social__logo:hover {
@@ -657,26 +656,64 @@ select {
   color: #fff;
 }
 
-@media all and (max-width: 500px) {
-  .hvr-sweep-to-left {
-    margin: 7px 0px 7px 0px;
-  }
-  .grid {
-    -ms-grid-columns: 1fr;
-    grid-template-columns: 1fr;
-    margin: 0 10px 0 10px;
-    padding: auto;
-  }
+.card {
+  background-color: dodgerblue;
+  position: relative;
+  color: white;
+  height: 270px;
+  border-radius: 5%;
+}
 
-  .about-page {
-    margin: 0;
-  }
+.cards {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  grid-gap: 1rem;
+  padding-top: 2rem;
+}
+
+.project__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 5%;
+}
+
+.img__description {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.82);
+  color: #fff;
+  visibility: hidden;
+  opacity: 0;
+  border-radius: 5%;
+  text-align: center;
+  justify-content: center;
+
+  /* transition effect. not necessary */
+  transition: opacity 0.8s, visibility 0.8s;
+}
+
+.card:hover .img__description {
+  visibility: visible;
+  opacity: 1;
+}
+
+.project-text {
+  margin: 0px 50px;
+}
+
+.project-link {
+  color: white;
+}
+
+@media all and (max-width: 500px) {
   .about-text {
     width: auto;
-    margin: auto;
-    padding: 0px 20px 0px 20px;
   }
-
   .skills-text {
     width: auto;
     margin: 20px 50px 0px 50px;
@@ -685,7 +722,7 @@ select {
     width: auto;
     margin: 20px 10px 0px 10px;
     text-align: center;
-    font-size: 80px;
+    font-size: 100px;
   }
   .profile__picture {
     width: 90%;
@@ -693,29 +730,16 @@ select {
     padding: 0px 10px 10px 10px;
   }
   .profile {
-    padding: 0px 0px 0px 10px;
+    padding-top: 0px 10px 0px 10px;
     align-content: center;
-    align-items: center;
-    
   }
   .intro-text {
     text-align: center;
     padding: 0 10px 0 10px;
   }
-  .page-footer {
-    margin-bottom: 0;
-    background-color: var(--background-primary);
-    position: unset;
-  }
-  .contact-block {
-    margin: 20px 0px 20px 50px;
-  }
 }
+
 @media all and (min-width: 500px) and (max-width: 750px) {
-  .grid {
-    -ms-grid-columns: 1fr 20px 1fr;
-    grid-template-columns: 1fr 1fr;
-  }
   .about-text {
     width: auto;
   }
@@ -726,30 +750,36 @@ select {
     text-align: center;
     padding-left: 10px;
   }
-
-
 }
 
-
-@media all and (max-width: 750px) and (max-width: 1000px) {
-  .grid {
-    -ms-grid-columns: 1fr 20px 1fr;
-    grid-template-columns: 1fr 1fr;
+@media (min-width: 720px) {
+  .cards {
+    grid-template-columns: repeat(3, 1fr);
+    margin: 0 auto;
   }
 }
 
-
-  @media all and (max-width: 1000px) {
-    .grid {
-      grid-gap: 10px;
-      -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
-    }
-    .grid__item:last-child {
-      grid-column: auto / auto;
-      grid-row: auto / auto;
-    }
-    h1 {
-      font-size: 22px;
-    }
+@media (min-width: 720px) and (max-width: 1200px) {
+  .cards {
+    max-width: 700px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1rem;
   }
+  .card {
+    width: 390px;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 720px) {
+  .card {
+    width: 390px;
+    margin-left: 10px;
+  }
+}
+
+@media all and (max-width: 750px) {
+  h1 {
+    font-size: 22px;
+  }
+}
